# ZenovaLoader

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
src/: ModLoader.cpp  ModLoader.h  ZenovaModLoader.cpp
src/Utils/: AppUtils.cpp
